modified styles.css and added image chef.webp

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </main>
 
     <section class="left-bar">
-        <h2>Chef's Journal</h2>
+        <h2 class="h2-chef"><span class="hat-chef"><img src="./images/chef.webp" alt=""></span> Chef's Journal</h2>
 
         <div class="left-pages">
             <div class="bar-dashboard">
