--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
     <link rel="stylesheet" href="./styles.css">
+
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> -->
 </head>
 <body>
     <header>
@@ -34,27 +36,28 @@
     </header>
 
     <main>
-
-        <div class="img-main">
-            <img src="./images/mainimage.webp" alt="Delicious food on a table">
+        <div class="welcoming-section">
+            <div class="img-main">
+                <img src="./images/mainimage.webp" alt="Delicious food on a table">
+            </div>
+            <h1>Welcome to your new kitchen companion.</h1>
+            <p>What are we cooking today? Select a recipe from the dashboard to view details, or start writing your next culinary masterpiece.</p>
         </div>
-        <h1>Welcome to your new kitchen companion.</h1>
-        <p>What are we cooking today? Select a recipe from the dashboard to view details, or start writing your next culinary masterpiece.</p>
 
     </main>
 
     <section class="left-bar">
-        <h2 class="h2-chef"><span class="hat-chef"><img src="./images/chef.webp" alt=""></span> Chef's Journal</h2>
+        <h2 class="h2-chef" id="welcoming"><span class="hat-chef"><img src="./images/chef.webp" alt=""></span> Chef's Journal</h2>
 
         <div class="left-pages">
-            <div class="bar-dashboard">
+            <div class="bar-dashboard" id="dashboarding">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M304 70.1C313.1 61.9 326.9 61.9 336 70.1L568 278.1C577.9 286.9 578.7 302.1 569.8 312C560.9 321.9 545.8 322.7 535.9 313.8L527.9 306.6L527.9 511.9C527.9 547.2 499.2 575.9 463.9 575.9L175.9 575.9C140.6 575.9 111.9 547.2 111.9 511.9L111.9 306.6L103.9 313.8C94 322.6 78.9 321.8 70 312C61.1 302.2 62 287 71.8 278.1L304 70.1zM320 120.2L160 263.7L160 512C160 520.8 167.2 528 176 528L224 528L224 424C224 384.2 256.2 352 296 352L344 352C383.8 352 416 384.2 416 424L416 528L464 528C472.8 528 480 520.8 480 512L480 263.7L320 120.3zM272 528L368 528L368 424C368 410.7 357.3 400 344 400L296 400C282.7 400 272 410.7 272 424L272 528z"/></svg>
                 <h2>Dashboard</h2>
             </div>
 
-            <div class="bar-presets">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M216 64C229.3 64 240 74.7 240 88L240 128L400 128L400 88C400 74.7 410.7 64 424 64C437.3 64 448 74.7 448 88L448 128L480 128C515.3 128 544 156.7 544 192L544 480C544 515.3 515.3 544 480 544L160 544C124.7 544 96 515.3 96 480L96 192C96 156.7 124.7 128 160 128L192 128L192 88C192 74.7 202.7 64 216 64zM216 176L160 176C151.2 176 144 183.2 144 192L144 240L496 240L496 192C496 183.2 488.8 176 480 176L216 176zM144 288L144 480C144 488.8 151.2 496 160 496L480 496C488.8 496 496 488.8 496 480L496 288L144 288z"/></svg>
-                <h2>Presets</h2>
+            <div class="bar-favorite" id="favoriting">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 640"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2026 Fonticons, Inc.--><path d="M305 151.1L320 171.8L335 151.1C360 116.5 400.2 96 442.9 96C516.4 96 576 155.6 576 229.1L576 231.7C576 343.9 436.1 474.2 363.1 529.9C350.7 539.3 335.5 544 320 544C304.5 544 289.2 539.4 276.9 529.9C203.9 474.2 64 343.9 64 231.7L64 229.1C64 155.6 123.6 96 197.1 96C239.8 96 280 116.5 305 151.1z"/></svg>
+                <h2>Favorites</h2>
             </div>
         </div>
 
@@ -65,6 +68,6 @@
         </div>
     </section>
 
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
