modified styles.css and index.html
Style dashboard Section

--- a/index.html
+++ b/index.html
@@ -36,13 +36,29 @@
     </header>
 
     <main>
-        <div class="welcoming-section">
+        <section class="welcoming-section" id="welcoming-page">
             <div class="img-main">
                 <img src="./images/mainimage.webp" alt="Delicious food on a table">
             </div>
             <h1>Welcome to your new kitchen companion.</h1>
             <p>What are we cooking today? Select a recipe from the dashboard to view details, or start writing your next culinary masterpiece.</p>
-        </div>
+        </section>
+
+        <section class="display-hidden dashboard-section" id="dashboarding-page">
+            <div class="head-dashboard">
+                <h1>Dashboard</h1>
+                
+                <div class="new-button">
+                    New Recipe
+                </div>
+            </div>
+        </section>
+
+        <section class="display-hidden favorites-section" id="favoriting-page">
+            <div>
+                <h1>Favorites</h1>
+            </div>
+        </section>
 
     </main>
 
